# compile-principle

./: .gitignore  Makefile  README.md  grammar.txt  pyproject.toml  test.py
compilecore/: LR_derivation.py  __init__.py  base.py  calc.py  ffs.py  grammar.py  ll1.py  pis.py  rnd.py  utils.py
compilecore/parser/: __init__.py  ast.py  error.py  interpreter.py  lexer.py  logger.py  parser.py  token.py
compilecore/project/: __init__.py  calc.py  rnd.py
docs/: index.html
docs/articles/md-docs/LL1/: index.html
docs/articles/md-docs/RE-NFA-DFA/: index.html
docs/articles/md-docs/README/: index.html
docs/articles/md-docs/SSA/: index.html
docs/articles/md-docs/上下文无关文法/: index.html
docs/css/: index.css
docs/js/: change_mode.js  check_box.js  navigator.js  prism.js
md-docs/: LL1.md  RE-NFA-DFA.md  README.md  SSA.md  _config.yml  dir.yml  first-follow-select.md  上下文无关文法.md  使用方法.md  依赖关系分析.md  控制流分析.md  数据流分析.md  消除左递归.md
md-docs/其他/: flex-bison.md
md-docs/编译原理/: 中间代码生成.md  后端代码生成.md  并行性和局部性优化.md  引论.md  指令级并行.md  机器无关优化.md  第一章-引论.md  简单的翻译器.md  词法分析.md  语法分析.md  语法制导翻译.md  过程间分析.md  运行时环境.md
projects/: RE-NFA-DFA.md
src/: run_chapter2.py  使用方法.md
src/calculator/: main.py
src/chapter2/: __init__.py  cfg.py  grammar.py  ll1.py  utils.py
src/chapter2/testfiles/: g1.txt  g11.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g7.txt
src/exam/11/: 2.txt
src/exam/12/: 2.txt
src/exam/13/: 2.txt
src/exam/14/: 2.txt
src/front/flex-bison/: .gitignore  Makefile  calc.1  calc.y
testfiles/: g10.txt  g2.txt  g3.txt  g4.txt  g8.txt  g9.txt  grammar.txt
(+20 files in other folders)
